# plinycompute

./: CMakeLists.txt  temp.txt
applications/: Applications.cmake
applications/CodeSearch/: CMakeLists.txt  CodeSearch.cc  CodeSearchLoadData.cc  CountDB.cc  genFakeData.py  genFakeQuery.cc
applications/CodeSearch/sharedLibraries/headers/: ProgramResultWriter.h  SearchProgramData.h  TopProgram.h
applications/CodeSearch/sharedLibraries/source/: ProgramResultWriter.cc  SearchProgramData.cc  TopProgram.cc
applications/TPCHBench/: tpchJaccard.cc
conf/: serverlist
